--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <!-- header design-->
     <header class="header">
-        <a href="#" class="logo">Portfolio</a>
+        <a href="#" class="logo">CourseInfo</a>
 
         <i class='bx bx-menu' id="menu-icon"></i>
 
